put review and retrospective 4 in report

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -81,3 +81,12 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
   howpublished = "\url{http://renaissancesoftware.net/files/articles/PlanningPoker-v1.1.pdf}",
   note = "[Online; Accessed 03-03-2015]"
 }
+
+@book{fowler:refac,
+ title = {Refactoring: Improving the Design of Existing Code},
+ year = {1999},
+ isbn = {0-201-48567-2},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+key = {{$\!\!$}} ,
+} 
