--- a/Content/ReflectionMethodology/TemporaryWorkSheets/tempWorkSheets.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/tempWorkSheets.tex
@@ -7,3 +7,5 @@
 \pagebreak
 \input{Content/ReflectionMethodology/TemporaryWorkSheets/review3}
 \input{Content/ReflectionMethodology/TemporaryWorkSheets/retrospective3}
+\input{Content/ReflectionMethodology/TemporaryWorkSheets/review4}
+\input{Content/ReflectionMethodology/TemporaryWorkSheets/retrospective4}
