--- a/Content/StepCounter/dataCollection.tex
+++ b/Content/StepCounter/dataCollection.tex
@@ -1,9 +1,8 @@
 \subsection{Data Collection}
-The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on a android smartphones see \Kristian{ref til android side om sensors} for description. We decided to gather data from three sensors accelerometer, gravity and gyroscope we also measured the time delay between each sensor reading.
-
+The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on a android smartphones see \Kristian{ref til android side om sensors} for description. We decided to gather data from three sensors: accelerometer, gravity, and gyroscope. We also measured the time delay between each sensor reading.
 
 \subsubsection{Collection Procedure}
-To generate the sample data we a person perform the follow tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm).
+To generate the sample data a person performs the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to the arm).
 \begin{enumerate}
 \item Walk 100 steps.
 \item Jog 100 steps.
@@ -13,9 +12,9 @@ To generate the sample data we a person perform the follow tasks while carrying 
 \item Standing still for 2 mins.
 \end{enumerate}
 
-These tasks can then be repeated with for all carrying positions, different smartphones and multiple persons. In practice the tasks where carried out with two people, the smartphone Samsung Galaxy S III and in one carrying position \textit{strapped to arm}.
+These tasks can then be repeated for all carrying positions, different smartphones and multiple persons. In practice the tasks were carried out with two people, the smartphone Samsung Galaxy S III and in one carrying position, strapped to the arm.
 
-After data collection we are now ready to test algorithms against each other.
+After the data collection, we are now ready to test algorithms against each other.
 
 
 \subsubsection{Test Results}
@@ -23,5 +22,3 @@ After data collection we are now ready to test algorithms against each other.
 
 
 % what was the results of our tests
-
-\Alexander{Check for correct tense (past-tense vs. present-tense) in entire chapter.}
