Added Ivan todos from Supervisor Meeting 16-04

--- a/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective4.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective4.tex
@@ -7,7 +7,8 @@ In this iteration we decided to postpone the decisions and documentation of the 
 Given the size of the project and the fact we all have worked together before, we are generally on track with the unspoken metaphor, which is essentially just what the program is. i.e. the music player is called music player.
 Besides the small team makes it easy to communicate if and when conflicts of understanding occur.
 All this makes the metaphor an implicit understanding between the team members.
-
+\Ivan{Title is a type of metaphor - reflect upon this. Maybe even change the title.}
+\Ivan{Icons are types of metaphors - reflect upon this. Maybe even change the icons.}
 \subsubsection{40-hour Work Week}
 Besides single and uncorrelated episodes, we have not had any problems with energy.
 Some of this energy can also be attributed to the fact we have mostly coded and not written much report this iteration. 
@@ -26,6 +27,7 @@ i.e. If the customer wants a feature (pacer), this feature (pacer) is developed 
 
 \subsubsection{On-site Customer}
 Our on-site customer becomes relevant when we start thinking about acceptance tests, which we did not really do yet.
+\Ivan{Haven't we used a surrogate customer?}
 
 \paragraph{What has the absence of a customer meant for our project?}
 Because we have not properly used a surrogate customer, we have not discussed the project as much as we could have (feedback), and we have not gotten any acceptance tests done. Overall this has not been a big issue, because we have been on track - moving towards finishing our MVP.
