--- a/Content/ReflectionMethodology/TemporaryWorkSheets/review4.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/review4.tex
@@ -13,7 +13,7 @@ Summary of extended meeting at the bottom of this document.
 This actually works okay, as it gives the opportunity to estimate trivial issues to less than half a day, which obviously will give a lot of overhead.
 
 \end{itemize}
-
+\Ivan{Good reflections and good section.}
 \textbf{What Did We Accomplish?}
 \begin{itemize}
 \item We finished the step counter
