Solved #13 'Write Retrospective 4 addition into report'

--- a/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective3.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective3.tex
@@ -74,3 +74,4 @@ For boundary tests as input it is okay to test them by creating an array with al
 
 \subsubsection{Continuous Integration}
 We have had some problems making sure the master branch is stable. See the extended meeting from Iteration Review 3 (Pushing to Master and Fixing Crashes). This has been a problem all the time, but the issue was not caught until now.
+\pagebreak
