Restructured Temporary Work Sheets into chapter.

--- a/Report.tex
+++ b/Report.tex
@@ -51,6 +51,10 @@
 \input{Content/Conclusion/futureWork}
 \input{Content/Conclusion/conclusion}
 
+\chapter{Temporary Work Sheets}
+\label{chap:temp}
+\input{Content/TemporaryWorkSheets/tempWorkSheets}
+
 %\clearforchapter
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for talf
 \addtocontents{toc}{\protect\cftpagenumbersoff{chapter}} % Fjernelse af nummerering af bilag i TOC
