working on step counter section

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -89,4 +89,20 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
 key = {{$\!\!$}} ,
-} 
+}
+
+@misc{zhao:pedometer,
+  title={Full-Featured Pedometer Design Realized with 3-Axis Digital Accelerometer},
+  author={Neil Zhao},
+  year={2010},
+  howpublished = "\url{http://www.analog.com/media/en/technical-documentation/analog-dialogue/pedometer.pdf}",
+  note = "[Online; Accessed 21-04-2015]"
+}
+
+@misc{android:sensor,
+  title={Sensors Overview},
+  author={Google Android},
+  year={2015},
+  howpublished = "\url{http://developer.android.com/guide/topics/sensors/sensors_overview.html}",
+  note = "[Online; Accessed 21-04-2015]"
+}
