--- a/Content/StepCounter/implementation.tex
+++ b/Content/StepCounter/implementation.tex
@@ -3,3 +3,4 @@ In our implementation of the step counter we decided to split the task into a da
 
 As there is no built-in library available for the Android API version 16, we had a range of algorithms to choose from. We found the precision could vary greatly from algorithm to algorithm so we had to test algorithms against each other. In order to do so we first had to generate some sample data collected from the smartphones.
 \input{Content/StepCounter/dataCollection}
+\input{Content/StepCounter/comparison}
