Corrected some spelling mistakes and rearranged Analysis section order.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -8,15 +8,15 @@ They concluded that the running pace for novice runners, while listening to rela
 
 This conclusion is in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggests, that \textit{``... music had no impact on mean power output''}.
 
-As a result, we can not definitively conclude whether music of different tempos will affect the running experience differently. 
+As a result, we can not definitively conclude whether music of different tempo will affect the running experience differently. 
 However by adhering to \citet{musicRunEffectArticle}'s conclusion, we can only improve the running experience, since \citet{musicNoPerformanceEffect} concludes there can be no negative impact, by playing music.
 
 Today many runners use their smartphone as a music player, which can either be placed in their hand, pocket, or on their arm.
-The sensors in a smartphone enable reading the pace and speed of the runner.
+The sensors in a smartphone enable monitoring the pace and speed of the runner.
 From this knowledge the first problem can be stated:
 
 \begin{center}
-\textit{How can we provide music with an appropriate tempo, compared to the current pace, to the runner through a smartphone?}
+\textit{How can we provide music with an appropriate tempo, compared to the current pace, to the runner through the use of a smartphone?}
 \end{center}
 
 %Second Problem - UI%
