Added first draft of beginning to Problem Domain.

--- a/Content/Analysis/problemDomain.tex
+++ b/Content/Analysis/problemDomain.tex
@@ -1,1 +1,3 @@
 \section{Problem Domain}
+Given these problems, we can investigate in what domain this is a problem.
+\Alexander{Delete this and write much better.}
