added editions to sources

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -3,6 +3,7 @@
 	publisher = {},
 	year = {},
 	author = {},
+	isbn = {},
 	edition = {}
 }
 
@@ -33,7 +34,7 @@
  year = {2000},
  isbn = {0-201-61641-6},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
+ edition = {2nd}
 } 
 
 @article{musicRunEffectArticle,
@@ -70,8 +71,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
  year = {2000},
  isbn = {0201710919},
  edition = {1st},
- publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.}
 } 
 
 @misc{xp:planningPoker,
@@ -87,8 +87,8 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
  year = {1999},
  isbn = {0-201-48567-2},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
-key = {{$\!\!$}} ,
+ author = {Martin Fowler},
+ edition = {1st}
 }
 
 @misc{zhao:pedometer,
@@ -105,4 +105,13 @@ key = {{$\!\!$}} ,
   year={2015},
   howpublished = "\url{http://developer.android.com/guide/topics/sensors/sensors_overview.html}",
   note = "[Online; Accessed 21-04-2015]"
+}
+
+@book{xp:estimation,
+	title = {Agile Estimation and Planning},
+	publisher = {Prentice Hall},
+	year = {2005},
+	author = {Mike Cohn},
+	isbn = {0-13-147941-5}
+    edition = {1st}
 }
