Written draft of problem domain, not done yet.

--- a/Content/Analysis/problemDomain.tex
+++ b/Content/Analysis/problemDomain.tex
@@ -1,3 +1,15 @@
 \section{Problem Domain}
-Given these problems, we can investigate in what domain this is a problem.
-\Alexander{Delete this and write much better.}
+As introduced our problem will occur in the domain of runners. 
+This can be both outdoor and indoor.
+
+Outdoor runners can be in running beside traffic and other dangerous objects, for which they need to listing to their surrounding.
+For this safety critical situation we can assume the runner will take the appropriate precautions and use a headset without noise-cancellation.
+Because of the immediate danger of the traffic, we must never force the runner to concentrate fully on the smartphone just to control it. 
+This could cause the runner to be inattentive and run into traffic.
+
+Outdoor runners can also run in nature rich environment away from traffic and other dangerous objects. 
+However, in this environment the roads or paths used for running can be tricky, hence the runners concentration must be on the path.
+Also this scenario restricts us to not occupy the runners concentration.
+
+The third domain is on a treadmill in a gym.
+\Alexander{This section is not done.}
