Minor corrections and change of a subsub to a paragraph

--- a/Content/StepCounter/dataCollection.tex
+++ b/Content/StepCounter/dataCollection.tex
@@ -1,8 +1,8 @@
 \subsection{Data Collection}
-The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on a android smartphones see \citet{android:sensor} for description. We decided to gather data from three sensors: accelerometer, gravity and gyroscope. We also measured the time delay between each sensor reading.
+The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on an Android smartphone, see \citet{android:sensor} for a overview of these. We decided to gather data from three sensors: accelerometer, gravity and gyroscope. We also measured the time delay between each sensor reading.
 
 \subsubsection{Collection Procedure}
-To generate the sample data we a person perform the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm). 
+To generate the sample data we had a person perform the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm)
 \begin{enumerate}
 \item Walk 100 steps. \textit{Walk: to advance on foot at a moderate speed; proceed by steps; move by advancing the feet alternately so that there is always one foot on the ground.} %http://dictionary.reference.com/browse/walk?s=t
 \item Jog 100 steps. \textit{Jog: to run at a leisurely, slow pace.} %http://dictionary.reference.com/browse/jog?s=t
@@ -13,7 +13,7 @@ To generate the sample data we a person perform the following tasks while carryi
 \end{enumerate}
 %TODO sort out refs
 
-The Purpose of task one to five is generate data the algorithms should analyse and correctly calculate the 100 steps taken. The data from task six should calculated to zero steps taken.
+The purpose of task 1-5 is generate data the algorithms should analyse and correctly calculate the 100 steps taken. The data from task 6 should be interpreted as 0 steps taken.
 
 These tasks can then be repeated for all carrying positions, different smartphones and multiple persons. In practice the tasks were carried out with two people, the smartphone Samsung Galaxy S III and in one carrying position, strapped to the arm.
 
