--- a/Content/StepCounter/implementation.tex
+++ b/Content/StepCounter/implementation.tex
@@ -1,6 +1,6 @@
 \section{Implementation}
 In our implementation of the step counter we decided to split the task into a data collection task, testing of algorithm task and an implementation on android task. The reason for doing so is that our approach writing tests, code, and then run the test is unsuited for implementing a step counter. This is because the running of tests cannot be automated as it requires a person to move around with the smartphones.
 
-As there is no built-in library available for Android API version 16, we had to choose an algorithm. We found the precision could vary greatly from algorithm to algorithm, so we had to test algorithms against each other. In order to do so we first had to generate some sample data collected from the smartphones.
+As there is no built-in step counter library available for Android API version 16, we had to choose an algorithm. We found the precision could vary greatly from algorithm to algorithm, so we had to test algorithms against each other. In order to do so we first had to generate some sample data collected from the smartphones' sensors.
 \input{Content/StepCounter/dataCollection}
 \input{Content/StepCounter/comparison}
