--- a/Content/TitlePage/synopsis.tex
+++ b/Content/TitlePage/synopsis.tex
@@ -1,2 +1,1 @@
-This report contains
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur tristique justo, vel pellentesque augue porttitor ut. Suspendisse potenti. Aliquam ipsum metus, commodo eget eros eu, consectetur auctor turpis. Suspendisse potenti. Sed ut felis elit. Proin eget urna placerat ante rutrum scelerisque ac id neque. Quisque gravida porttitor pulvinar. Fusce feugiat arcu at quam hendrerit, nec ultrices dui fermentum. Nam non nibh ac ligula suscipit dictum. Ut sit amet massa at massa ornare lobortis et ac neque. Duis vulputate mauris sit amet dictum iaculis. Praesent tellus velit, lobortis ac elit in, laoreet efficitur tortor. Etiam blandit, mi ac tincidunt tincidunt, ante sapien efficitur leo, eu efficitur nisi elit condimentum sem. Mauris vulputate neque ut lorem consequat semper. Praesent non tempus tellus.
+The purpose of this project was to make a runner's running experience less tedious and more inspiring, by playing music which fits their running tempo. The project is based on the research of Edworthy and Waring, which concluded that music tempo affects a runner's pace and enjoyment.
