Restructured report as discussed.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -1,4 +1,4 @@
-\section{What is eXtreme Programming?}
+\section{eXtreme Programming explained}
 What is the XP methodology?
 What does Extreme mean? E.g. Review is much more important and useful, so turn it up in comparison to other methodologies.
 Start of Beck books.
