--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -3,3 +3,8 @@ Our modifications of XP.
 Practical applications.
 
 e.g. Code Standards are not as important in our project because we are familiar with each other.
+
+
+p.s. remember to mention how we have used \texttt{Essence} retrospective methods.
+
+p.p.s. remember to mention that we use TDD, because it is referred to from Test - Unit Test.
