--- a/Report.tex
+++ b/Report.tex
@@ -4,44 +4,49 @@
 
 % Forindhold - nummereres med romertal
 \frontmatter 
-\input{Content/FrontPage/frontpage}
+\input{Addendum/FrontPage/frontpage}
 \cleardoublepage
-\input{Content/TitlePage/titlepage}
+\input{Addendum/TitlePage/titlepage}
 \cleardoublepage
-\input{Content/Preface/preface}
+\input{Addendum/Preface/preface}
 \cleardoublepage
-
-% Indholdsfortegnelse (TOC)
-\setlength\parskip{0ex} % Fjerner den vertikale afstand mellem hver linie i indholdsfortegnelse
-\tableofcontents* % Indholdsfortegnelsen 
-\setlength{\parskip}{3mm} % Aktiverer afstanden igen for resten af rapporten (afstem med preamble!)
-%\addtocontents{toc}{\protect\newpage} % Fremtvinger sideskift i indholdsfortegnelsen hvis nødvendig
-
+\input{Addendum/TableOfContents/tableOfContents}
 
  % Hovedindhold - nummereres fra side 1
 \mainmatter
-\makeevenfoot{custom}{Page \thepage~of \pageref{LastPage}}{}{Aalborg University} % Definerer lige siders sidefod efter modellen \makeevenfoot{Navn}{Venstre}{Center}{Højre}
-\makeoddfoot{custom}{Aalborg University}{}{Page \thepage~of \pageref{LastPage}} % Definerer ulige siders sidefod efter modellen \makeoddfoot{Navn}{Venstre}{Center}{Højre}		
-\pagestyle{custom}
+
+\input{Addendum/FooterSetup/footerSetup}
 
 % Rapportindhold
 \chapter{Introduction}
 \label{chap:intro}
 \input{Content/Introduction/introduction}
 
-\chapter{Analysis}
-\label{chap:analysis}
-\input{Content/Analysis/analysis}
-
 \chapter{Methodology}
 \label{chap:methodology}
 \input{Content/Methodology/methodology}
+
+\chapter{Tempo Player - The Tour}
+\label{chap:tempoPlayer}
+\input{Content/TempoPlayer/tempoPlayer}
+
+\chapter{Music Player}
+\label{chap:musicPlayer}
+\input{Content/MusicPlayer/musicPlayer}
+
+\chapter{Song Scanner}
+\label{chap:songScanner}
+\input{Content/SongScanner/songScanner}
 
 \chapter{Step Counter}
 \label{chap:stepCounter}
 \input{Content/StepCounter/stepCounter}
 
-\chapter{Reflection of Methodology}
+\chapter{Test}
+\label{chap:test}
+\input{Content/Test/test}
+
+\chapter{Methodology - Reflection}
 \label{chap:reflectionMethodology}
 \input{Content/ReflectionMethodology/reflectionMethodology}
 
@@ -67,10 +72,22 @@
 \Huge \textbf{Appendix}
 \end{center}
 \end{vplace}
-\input{Content/Appendix/appendix}
+\input{Appendix/appendix}
+
+\chapter{Releases - (After Methodology)}
+\label{chap:releases}
+\input{Content/Releases/releases}
+
+\chapter{Tactile Interface - (After Step Counter)}
+\label{chap:tactileInterface}
+\input{Content/TactileInterface/tactileInterface}
 
 
 \bibliography{Bibliography/bibliography}
+
+
+\input{Appendix/appendixDVD}
+
 
 
 
