Moved Temporary Worksheets to appendix and added Iteration chapter.

--- a/Report.tex
+++ b/Report.tex
@@ -46,6 +46,10 @@
 \label{chap:test}
 \input{Content/Test/test}
 
+\chapter{Iteration Considerations}
+\label{chap:iteration}
+\input{Content/Iteration/iteration}
+
 \chapter{Methodology - Reflection}
 \label{chap:reflectionMethodology}
 \input{Content/ReflectionMethodology/reflectionMethodology}
@@ -55,10 +59,6 @@
 \input{Content/Conclusion/discussion}
 \input{Content/Conclusion/futureWork}
 \input{Content/Conclusion/conclusion}
-
-\chapter{Temporary Work Sheets}
-\label{chap:temp}
-\input{Content/TemporaryWorkSheets/tempWorkSheets}
 
 %\clearforchapter
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for talf
@@ -74,14 +74,14 @@
 \end{vplace}
 \input{Appendix/appendix}
 
-\chapter{Releases - (After Methodology)}
-\label{chap:releases}
-\input{Content/Releases/releases}
-
 \chapter{Tactile Interface - (After Step Counter)}
 \label{chap:tactileInterface}
 \input{Content/TactileInterface/tactileInterface}
 
+
+\chapter{Temporary Work Sheets}
+\label{chap:temp}
+\input{Content/TemporaryWorkSheets/tempWorkSheets}
 
 \bibliography{Bibliography/bibliography}
 
