Restructed methodology reflection.

--- a/Content/ReflectionMethodology/reflectionMethodology.tex
+++ b/Content/ReflectionMethodology/reflectionMethodology.tex
@@ -1,14 +1,16 @@
 \input{Content/ReflectionMethodology/reflectionIntroduction}
+
+\input{Content/ReflectionMethodology/reflectionPairProgramming}
+\input{Content/ReflectionMethodology/reflectionPlanning}
+\input{Content/ReflectionMethodology/reflectionTesting}
+\input{Content/ReflectionMethodology/reflectionRefactoring}
+
+\section{Other practices}
 \input{Content/ReflectionMethodology/reflectionWorkWeek}
 \input{Content/ReflectionMethodology/reflectionCodingStandard}
 \input{Content/ReflectionMethodology/reflectionCollectiveOwnership}
 \input{Content/ReflectionMethodology/reflectionContinuousIntegration}
 \input{Content/ReflectionMethodology/reflectionMetaphor}
 \input{Content/ReflectionMethodology/reflectionOnSiteCustomer}
-\input{Content/ReflectionMethodology/reflectionPairProgramming}
-\input{Content/ReflectionMethodology/reflectionPlanning}
-\input{Content/ReflectionMethodology/reflectionRefactoring}
 \input{Content/ReflectionMethodology/reflectionSimpleDesign}
 \input{Content/ReflectionMethodology/reflectionSmallReleases}
-\input{Content/ReflectionMethodology/reflectionTesting}
-\input{Content/ReflectionMethodology/reflectionGeneral}
