Added Existing Bugs section to Tempo Player chapter.

--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -1,3 +1,4 @@
+\section{The Tour}
 This chapter should describe an overview of the program, as well as provide a couple of screenshots detailing the GUI of the program.
 
 i.e. Tempo Player is a music player that utilises the accelerometer to count the steps of the user. 
