Changed sections to describe iterations instead of releases.

--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -1,3 +1,5 @@
 Mention how this is part of \texttt{Essence} and not \texttt{eXtreme Programming}.
 
 Maybe even mention that this was made as part of SWI course mini project?
+
+This chapter should contain a time line with an overview of the iterations we have been through.
