--- a/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
@@ -3,12 +3,14 @@
 
 \subsubsection{Coding Standard}
 If we have any conflicts we will write it down in a coding standard document. We agreed with Ivan that we basically have a ``de facto'' (informal) coding standard by working together so long.
+\Ivan{Illustrate this ``de facto'' standard, maybe by examples.}
 
 \subsubsection{Metaphor}
 Ivan argued that our problem statement was a sort of metaphor, and we should not discard this practise entirely (as we suggested).
 The system could also be seen as a pacekeeper and/or a personal trainer.
 
 ``pace'' might be ambiguous, as it can represent both velocity and SPM. \Ivan{def. SPM}
+\Ivan{For whom will ``pace'' be ambiguous? Us - hence the Metaphor is an inward practice. \\ This however does not mean the user will see it as ambiguous.}
 
 \subsubsection{40-hour Work Week}
 About halfway in the iteration we found that we would not be able to finish all tasks and we decided to take a few late days (to get just a little bit more done - we did not expect to finish all tasks either way).
@@ -38,7 +40,7 @@ We decided to discard the old estimations and measurements due to their imprecis
 
 In this iteration we mainly worked on one large task (GUI), which should have been decomposed into many smaller tasks. Further we should be better to create new tasks instead of just added found issues and development to a todo list.
 
-XP makes use of the planning game for estimation of use cases. We first new the game as an individual exercise (explained), but later found, in the planning XP book, a collaborative version was described. We made/make use of planning poker as it has some advantages over the individual version of planning game. We later found that planning poker was very similar to the collaborative version of the planning game. (REMEMBER TO CHECK SOURCES) 
+XP makes use of the planning game for estimation of use cases. We first knew the game as an individual exercise (explained), but later found, in the planning XP book, a collaborative version was described. We made/make use of planning poker as it has some advantages over the individual version of planning game. We later found that planning poker was very similar to the collaborative version of the planning game. (REMEMBER TO CHECK SOURCES) 
 
 \subsubsection{Refactoring}
 We found that our quality is not good enough, so we will in the future (against XP recommendations) have explicit tasks for refactoring. \Ivan{see fowler}
@@ -56,6 +58,7 @@ Pair programming expects people to know what they are doing - trying out new/unk
 
 \subsubsection{Collective Ownership}
 We are still in the mindset of `I wrote it, it’s my code'. This has resulted in some methods not being refactored because `It was [name]’s code, I better not touch it'. We will of course try to break this mindset by enforcing refactoring.
+\Ivan{One of the goals for `Code standard' is to create an environment where the code is similar and easy to ``learn''.}
 
 \subsubsection{Testing}
 We have mainly developed GUI in this iteration, so we have not created many tests, as we have no idea to automatically test GUI. We also already decided to not focus alot on GUI, so we argue that GUI tests are less important.
@@ -66,4 +69,4 @@ There were of course made tests for the changes in dynamic queue and database.
 
 \subsubsection{Continuous Integration}
 As mentioned, we have mainly worked on GUI this iteration. This means that we have used the ``\#20 GUI…'' branch as a surrogate master branch. We have done this because the GUI was not ready to be pushed to master. By assuming the GUI branch was master, we have used continuous integration daily, as we merge and build it multiple times a day.
-Further we find this practice to be beneficial in larger projects with multiple teams, as we are only one team of 4, we almost never work on more than two branches at the same time. 
+Further we find this practice to be beneficial in larger projects with multiple teams, as we are only a team of 4, we almost never work on more than two branches at the same time. 
